fix: js decimal overflow

--- a/components/NFTCard/index.module.scss
+++ b/components/NFTCard/index.module.scss
@@ -155,12 +155,10 @@
 .skeletonCard {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 1.67rem;
-  padding: 1.33rem;
+  padding-bottom: 1.33rem;
   cursor: pointer;
   margin-bottom: 1.33rem !important;
   margin: 0 0.5rem;
-
-
   .nftImage {
     width: 100%;
     padding-bottom: 100%;
